# Parallel-N-Body-Simulation-with-Dynamic-Load-Balancing

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
benchmarks/: Readme.md
benchmarks/include/: benchmark.h  benchmark.hpp
benchmarks/microbenchmarks/: CMakeLists.txt  radix_sort_benchmark.cpp
benchmarks/src/: CMakeLists.txt  benchmark.c
cmake/: BuildInfo.h.in  ExternalDependencies.cmake  PrintDebug.cmake  utils.cmake
configs/: HPC.config  local.config  project.env.template
docs/: Remote configurations.md  folder_structure.md
docs/compilation/: Dependencies  How to Compile.md
docs/personal_notes/: Algorithm Breakdown.md  Custom Benchmark.md  Double precision and number normalization.md  Implementation Notes.md  MPI Communication overhead vs computation.md  Reference.md
include/: linear_algorithms.hpp
include/benchmark/: benchmark.h
include/debug/: print_debug.h  unique_print_debug.h
include/utils/: build_info.h  info_utils.h  random_utils.h  random_values.hpp
sandbox/: CMakeLists.txt  LinearBarnesHutTree.cpp  bounding_box.cpp  morton_curve.cpp  radix_sort.cpp
scripts/data_manipulation/: bin2vtk.py  merge_benchmark_results.py
scripts/hpc_helpers/: lastBenchmark.sh  lastError.sh  lastJobDir.sh  lastOutput.sh  lastStat.sh  startup.sh
scripts/run/: hpc_run.sh  local_run.sh  run.pbs
src/: main.cpp
src/benchmark/: CMakeLists.txt  benchmark.c
tests/: CMakeLists.txt  benchmark_tests.cpp
